# drivers_adapter

./: .gitignore  BUILD.gn  LICENSE  OAT.xml  README.en.md  README.md  bundle.json
khdf/liteos/: BUILD.gn  Kconfig  Makefile  bundle.json  hdf.gni  hdf_driver.mk  hdf_lite.mk  lite.mk
khdf/liteos/manager/src/: devmgr_pm_reg.c
khdf/liteos/model/: BUILD.gn
khdf/liteos/model/audio/: BUILD.gn  Makefile
khdf/liteos/model/bus/usb/: BUILD.gn
khdf/liteos/model/display/: BUILD.gn  Makefile
khdf/liteos/model/input/: BUILD.gn
khdf/liteos/model/misc/dsoftbus/: BUILD.gn  Kconfig
khdf/liteos/model/misc/dsoftbus/src/: softbus_lwip_monitor.c
khdf/liteos/model/misc/light/: BUILD.gn
khdf/liteos/model/misc/vibrator/: BUILD.gn  Makefile
khdf/liteos/model/network/ethernet/: BUILD.gn  Makefile
khdf/liteos/model/network/wifi/: BUILD.gn  Makefile
khdf/liteos/model/sensor/: BUILD.gn  Kconfig  Makefile
khdf/liteos/model/storage/: BUILD.gn  Kconfig  Makefile  mtd_block_lite.c  mtd_char_lite.c  mtd_legacy_lite.c  storage_block_lite.c
khdf/liteos/model/storage/include/mtd/: mtd_legacy_lite.h
khdf/liteos/model/storage/src/mmc/: mmc_block_lite.c
khdf/liteos/model/storage/src/mtd/: mtd_block_lite.c  mtd_char_lite.c  mtd_legacy_lite.c
khdf/liteos/model/usb/device/: BUILD.gn  Kconfig  Makefile
khdf/liteos/model/usb/host/: BUILD.gn  Kconfig  Makefile
khdf/liteos/model/usb/host/include/: usb_pnp_manager.h  usb_pnp_notify.h
khdf/liteos/model/usb/host/src/: .usb_pnp_loader.o.cmd  usb_pnp_manager.c  usb_pnp_notify.c  (+1 more)
khdf/liteos/network/include/: netbuf_adapter.h
khdf/liteos/network/src/: net_device_adapter.c  netbuf_adapter.c
khdf/liteos/osal/include/: osal_cdev_adapter.h
khdf/liteos/osal/src/: osal_cdev.c  osal_firmware.c  osal_thread.c  osal_timer.c
khdf/liteos/platform/: BUILD.gn  Makefile
khdf/liteos/platform/src/: gpio_dev.c  i2c_dev.c  spi_dev.c  uart_dev.c
khdf/liteos/test/: BUILD.gn  Makefile  test_lite.mk
khdf/liteos_m/: BUILD.gn  Kconfig  bundle.json  hdf.gni  hdf_hcs.gni  hdf_macro.gni
khdf/liteos_m/core/: BUILD.gn
khdf/liteos_m/core/common/src/: devmgr_service_start.c  hdf_device_node_ext.c
khdf/liteos_m/hcs/: BUILD.gn  hcs_build.py
khdf/liteos_m/network/: BUILD.gn
khdf/liteos_m/network/src/: net_device_adapter.c  netbuf_adapter.c
khdf/liteos_m/osal/: BUILD.gn
khdf/liteos_m/osal/include/: osal_atomic_def.h
khdf/liteos_m/osal/src/: osal_spinlock.c  osal_timer.c
khdf/liteos_m/platform/: BUILD.gn
khdf/liteos_m/test/sample_driver/: BUILD.gn
khdf/liteos_m/test/sample_driver/include/: sample_service.h
khdf/liteos_m/test/sample_driver/src/: sample_driver.c
uhdf/: README.md  (+1 more)
uhdf/platform/: BUILD.gn
uhdf2/: hdi.gni  ohos.build
uhdf2/config/src/: hcs_blob_load.c
uhdf2/hcs/: BUILD.gn
uhdf2/hcs/large/: hdf.hcs
uhdf2/hcs/standard/: device_info.hcs  usb_cdcacm.hcs  usb_pnp_device.hcs
uhdf2/hdi/: BUILD.gn
uhdf2/hdi/src/: devmgr_client.c  devmgr_hdi.c  hdf_load_hdi.c  hdi_smq_syncer.cpp  hdi_support.cpp  idevmgr_client.cpp  iservmgr_client.cpp  iservmgr_hdi.cpp  object_collector.cpp  servmgr_client.c  servmgr_hdi.c  servstat_listener.c  servstat_listener_stub.cpp
uhdf2/hdi/test/: BUILD.gn
uhdf2/hdi/test/hdi_sample/sample_client_c/: BUILD.gn  sample_client_c_test.cpp
uhdf2/hdi/test/hdi_sample/sample_client_cpp/: BUILD.gn  sample_client_cpp_test.cpp
uhdf2/hdi/test/hdi_sample/sample_service_c/: BUILD.gn  sample_service_stub.c
uhdf2/hdi/test/hdi_sample/sample_service_cpp/: BUILD.gn  foo_service.cpp  foo_service.h  foo_stub.cpp  ifoo.h  sample_driver.cpp  sample_service_stub.cpp  sample_service_stub.h
uhdf2/hdi/test/reg_pnp_device/: hdf_dev_reg_pnp_test.c
uhdf2/hdi/test/reg_virtual_device/: hdf_dev_reg_virtual_test.c
uhdf2/hdi/test/servmgr/: service_manager_hdi_c_test.cpp  service_manager_hdi_test.cpp
uhdf2/host/: BUILD.gn  devhost.c  hdf_devhost.cfg  hdf_devhostmusl.cfg
uhdf2/host/include/: devsvc_manager_proxy.h
uhdf2/host/src/: devhost_object_config.c  devhost_service_full.c  devhost_service_stub.c  device_service_stub.c  devmgr_service_proxy.c  devsvc_manager_proxy.c  driver_loader_full.c  hdf_device_full.c  hdf_device_thread.c
uhdf2/host/test/: BUILD.gn
uhdf2/host/test/unittest/sample_driver/: BUILD.gn  sample_driver.c  sample_driver.cpp  sample_hdi.h  sample_hdi_service.c  sample_hdi_service.cpp  sample_hdi_service_stub.c  sample_hdi_service_stub.cpp
uhdf2/include/hdi/: devmgr_hdi.h  hdi_base.h  hdi_support.h  iservmgr_hdi.h  servmgr_hdi.h
uhdf2/include/hdi/base/: hdi_smq.h  hdi_smq_meta.h
uhdf2/ipc/: BUILD.gn
uhdf2/ipc/include/: hdf_remote_adapter.h  hdf_remote_adapter_if.h  iproxy_broker.h  object_collector.h
uhdf2/ipc/src/: hdf_remote_adapter.cpp  hdf_remote_service.c  hdf_sbuf_impl_hipc.cpp
uhdf2/manager/: BUILD.gn  device_manager.c  hdf_devmgr.cfg  hdf_devmgrmusl.cfg
uhdf2/manager/include/: devmgr_pnp_service.h  devmgr_service_stub.h  devsvc_manager_stub.h  usb_pnp_manager.h
uhdf2/manager/src/: devhost_service_proxy.c  devmgr_pnp_service.c  devmgr_query_device.c  devmgr_service_full.c  devmgr_service_stub.c  devmgr_virtual_service.c  devsvc_manager_stub.c  driver_installer_full.c  hdf_get_attribute.c  servstat_listener_holder.c  usb_pnp_manager.c
uhdf2/model/display/sequenceable/buffer_handle/: BUILD.gn
uhdf2/osal/: BUILD.gn
uhdf2/osal/src/: osal_sysevent.c
uhdf2/osal/test/: BUILD.gn
uhdf2/platform/: BUILD.gn
uhdf2/security/: BUILD.gn
uhdf2/shared/include/: hdf_remote_service.h
uhdf2/shared/src/: dev_attribute_parcel.c  dev_attribute_serialize.c  hcb_config_entry.c  hdf_attribute_full.c  hdf_device_info_full.c
uhdf2/test/: BUILD.gn
uhdf2/test/fuzztest/: BUILD.gn
uhdf2/test/resource/audio/: ohos_test.xml
uhdf2/test/unittest/common/: BUILD.gn
uhdf2/test/unittest/config/: BUILD.gn
uhdf2/test/unittest/manager/: BUILD.gn
uhdf2/test/unittest/model/audio/: BUILD.gn
uhdf2/test/unittest/module/audio/: BUILD.gn
uhdf2/test/unittest/osal/: BUILD.gn
uhdf2/test/unittest/platform/: BUILD.gn
uhdf2/utils/: BUILD.gn
uhdf2/utils/src/hcs_parser/: hcs_blob_load.c
(+56 files in other folders)
