#
# Copyright (c) 2021, Huawei Device Co., Ltd. All rights reserved.
#
# Redistribution and use in source and binary forms, with or without modification,
# are permitted provided that the following conditions are met:
#
# 1. Redistributions of source code must retain the above copyright notice, this list of
#    conditions and the following disclaimer.
#
# 2. Redistributions in binary form must reproduce the above copyright notice, this list
#    of conditions and the following disclaimer in the documentation and/or other materials
#    provided with the distribution.
#
# 3. Neither the name of the copyright holder nor the names of its contributors may be used
#    to endorse or promote products derived from this software without specific prior written
#    permission.
#
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
# "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
# THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
# PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR
# CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
# EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
# PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS;
# OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
# WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR
# OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
# ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

import("//drivers/adapter/khdf/liteos_m/hdf.gni")

config("libhdf_network") {
  visibility = [ ":*" ]
  include_dirs = []
}

static_library("hdf_network") {
  defines = [ "_BSD_SOURCE" ]
  sources = [
    "$hdf_fwk_path/model/network/common/netdevice/net_device.c",
    "src/net_device_adapter.c",
    "src/netbuf_adapter.c",
  ]
  include_dirs = [
    "include",
    "../osal/include",
    "$kernel_path/kernel/include",
    "$kernel_path/utils",
    "$ohos_kernel_liteos_m_lwip_path/porting/include",
    "$hdf_fwk_path/include/net",
    "$hdf_fwk_path/include",
    "$hdf_fwk_path/model/network/common/netdevice",
    "$hdf_fwk_path/include/utils",
    "$hdf_fwk_path/include/osal",
    "//third_party/lwip/src/include",
    "//third_party/musl/porting/liteos_m/kernel/include",
  ]

  public_configs = [ ":libhdf_network" ]
  deps = [ "//third_party/bounds_checking_function:libsec_static" ]
}
