#
# Copyright (c) 2021, Huawei Device Co., Ltd. All rights reserved.
#
# Redistribution and use in source and binary forms, with or without modification,
# are permitted provided that the following conditions are met:
#
# 1. Redistributions of source code must retain the above copyright notice, this list of
#    conditions and the following disclaimer.
#
# 2. Redistributions in binary form must reproduce the above copyright notice, this list
#    of conditions and the following disclaimer in the documentation and/or other materials
#    provided with the distribution.
#
# 3. Neither the name of the copyright holder nor the names of its contributors may be used
#    to endorse or promote products derived from this software without specific prior written
#    permission.
#
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
# "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO,
# THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
# PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR
# CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
# EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
# PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS;
# OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
# WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR
# OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
# ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

import("//drivers/adapter/khdf/liteos_m/hdf.gni")

hdf_driver("hdf_platform_lite") {
  sources = [
    "$HDF_FRAMEWORKS_PATH/support/platform/src/gpio/gpio_core.c",
    "$HDF_FRAMEWORKS_PATH/support/platform/src/gpio/gpio_if.c",
    "$HDF_FRAMEWORKS_PATH/support/platform/src/i2c/i2c_core.c",
    "$HDF_FRAMEWORKS_PATH/support/platform/src/i2c/i2c_if.c",
    "$HDF_FRAMEWORKS_PATH/support/platform/src/pwm/pwm_core.c",
    "$HDF_FRAMEWORKS_PATH/support/platform/src/uart/uart_core.c",
    "$HDF_FRAMEWORKS_PATH/support/platform/src/uart/uart_if.c",
    "plat_common.c",
  ]
}

config("public") {
  include_dirs = [
    "$HDF_FRAMEWORKS_PATH/support/platform/include/fwk",
    "$HDF_FRAMEWORKS_PATH/support/platform/include/gpio",
    "$HDF_FRAMEWORKS_PATH/support/platform/include/i2c",
    "$HDF_FRAMEWORKS_PATH/support/platform/include/pwm",
    "$HDF_FRAMEWORKS_PATH/support/platform/include/uart",
  ]
}
